style.css is changed.

--- a/css/style.css
+++ b/css/style.css
@@ -754,7 +754,7 @@ footer .pr {display: block;}
 	font-weight: bold;		/*太字に*/
 	padding: 10px 5px;		/*上下、左右へのボックス内の余白。基本的に数行下の「.ta1 th, .ta1 td」のpaddingと揃えておけばOKです。*/
 	background: #555;		/*背景色*/
-	margin-bottom: 15px;	/*下に空けるスペース*/
+	margin-bottom: 15px;		/*下に空けるスペース*/
 	border-radius: 5px;		/*角を丸くする指定*/
 	color: #fff;			/*文字色*/
 }
@@ -762,7 +762,7 @@ footer .pr {display: block;}
 /*ta1テーブルブロック設定*/
 .ta1 {
 	border-top: 1px solid #ccc;	/*テーブルの一番上の線。幅、線種、色*/
-	width: 100%;
+	width: 100%;			/*幅*/
 	margin: 0 auto 2em;		/*最後の「2em」がテーブルの下に空けるスペースです*/
 }
 
@@ -773,15 +773,16 @@ footer .pr {display: block;}
 
 /*th（左側）、td（右側）の共通設定*/
 .ta1 th, .ta1 td {
+	width: 50%;			/*幅*/
 	padding: 10px 5px;		/*上下、左右へのボックス内の余白*。基本的に数行上の「.ta1 caption」のpaddingと揃えておけばOKです。*/
-	word-break: break-all;	/*英語などのテキストを改行で自動的に折り返す設定。これがないと、テーブルを突き抜けて表示される場合があります。*/
+	word-break: break-all;		/*英語などのテキストを改行で自動的に折り返す設定。これがないと、テーブルを突き抜けて表示される場合があります。*/
 }
 
 /*th（左側）のみの設定*/
 .ta1 th {
 	width: 30%;			/*幅*/
-	text-align: left;	/*左よせにする*/
-	background: #f7f7f7;	/*背景色*/
+	text-align: left;		/*左よせにする*/
+	background: #f7f7f7;		/*背景色*/
 }
 
 
